Обновил пример ЕНВ файла

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DVMN_TOKEN = "sometoken"
-TG_TOKEN = "sometoken"
-TG_BOT_LOGGER_TOKEN = "sometoken"
-CHAT_ID = "somechat"
+DVMN_TOKEN = "token from Devman site"
+TG_TOKEN = "token for main TG_Bot"
+TG_BOT_LOGGER_TOKEN = "token for TG_Bot_Log"
+CHAT_ID = " main chat"
+LOGGER_CHAT_ID = "chat where send logs"
